--- a/css/anatomize.css
+++ b/css/anatomize.css
@@ -209,8 +209,8 @@
 }
 
 .anatomize-side-label-shadow {
-  fill: rgba(0, 0, 0, 0.6);
-  stroke: rgba(0, 0, 0, 0.6);
+  fill: rgba(0, 0, 0, .6);
+  stroke: rgba(0, 0, 0, .6);
   stroke-width: 0.6;
   pointer-events: none;
   font-family: var(--mono);
